# PrototypePOR

./: --reduced-dot  .gitignore  Gemfile  README.md  do_all.sh  do_all_with_debug.sh  log  result.json  ut
benchmark/: dining_philosopher.xml  simple_petrinet.xml
c/: CMakeLists.txt  Doxyfile  build.sh
c++/: Makefile
c/src/: ats_file_reader.h  common.h  main.cc
c/src/analyzer/: transition_system_analyzer.h
c/src/petrinet/: arc.h  ats_file_generator.h  main.cc  petrinet.h  petrinet_node.h  petrinet_option.h  place.h  pnml_parser.h  state.h  tina_parser.h  transition.h
c/src/por_module/: ats_file_reader.h  common.h  main.cc
c/src/por_module/analyzer/: transition_system_analyzer.h
c/src/por_module/reducer/: probe_reducer.h  reducer_executer.h  reducer_option.h
c/src/por_module/transition_system/: action.h  action_inl.h  action_table.h  age.h  state.h  state_space.h  transition.h  transition_system.h  vector.h  word.h
c/src/por_module/util/: combination.h  profiler.h
c/src/reducer/: probe_reducer.h  reducer_executer.h  reducer_option.h  validation_checker.h
c/src/transition_system/: action.h  action_inl.h  action_table.h  age.h  state.h  state_space.h  transition.h  transition_system.h  vector.h  word.h
c/src/util/: ats_file_reader.h  combination.h  debug.h  macro.h  profiler.h  simple_json.h  simple_timer.h  stoi.h
c/test/: action_test.cc  action_test.h  age_test.cc  cpplint.py  por_test.h  por_test_environment.h  probe_reducer_test.cc  state_space_test.cc  state_test.cc  test2.cc  test_main.cc  word_test.cc
c/test/test_data/: FMS-2.ats.json  Philosopher_02.ats.json  Philosopher_02.xml  Philosopher_05.ats.json  _Philosopher_02.ats.json  _interleave_3.ats.json  interleave_3.ats.json  relation.csv  sample.ats.json  sample_small.xml  sample_small_3.ats.json
c/test/test_data/old/: Philosopher_02.ats.json  Philosopher_10.ats.json
input/: sample.act.json  sample.ats.json  sample.ent.json  sample.lts.json  sample.rel  sample.sd  sample.tr  sample2.act.json  sample2.ats.json  sample2.rel  sample3.act.json
script/: do_all.rb  do_all.sh  do_all_with_debug.sh  generate_actions.sh  petrinet_por.rb  por_using_slim.rb  por_via_slim.rb  xml_converter.rb
src/: action.rb  action_table.rb  por.rb  por_env.rb  probe.ruby  reducer.rb  simple_test.rb  state.rb  state_space.rb  vector.rb  word.rb
tmp/: act.dot  ats.dot  full.dot  input.act.json  (+2 more)
(+75 files in other folders)
